--- a/app/views/shared/_dashboard.html.erb
+++ b/app/views/shared/_dashboard.html.erb
@@ -5,7 +5,7 @@
       <div class="card-body">
         <h5 class="card-title">
           <i class="fas fa-utensils"></i>
-          FOOD ENTRY
+          Check Order
         </h5>
         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
           <%= link_to userorders_path, :method => "get" do%>
