--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -1,4 +1,4 @@
-<div id="main">
+hi<div id="main">
 <%= render partial: 'shared/navbar'%>
   <%# <button class="openbtn" onclick="openNav()">☰ Open Sidebar</button>   %>
   <h2>Hotel Management System</h2>
